--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^8.6.0",
+    "helmet": "^4.6.0",
     "joi": "^17.4.0",
+    "morgan": "^1.10.0",
     "nest-winston": "^1.5.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
+    "serve-favicon": "^2.5.0",
     "socketio": "^1.0.0",
     "typeorm": "^0.2.34",
     "winston": "^3.3.3",
@@ -49,7 +52,9 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/joi": "^17.2.3",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.36",
+    "@types/serve-favicon": "^2.5.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
