--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3456
+HOST=localhost
 MODE=DEV
 
 POSTGRES_HOST=localhost
@@ -18,3 +19,5 @@ LOG_LEVEL=verbose
 
 SMTP_USER=test@example.com
 SMTP_PASSWORD=test
+
+SWAGGER_ENABLE=true
