--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.17",
+    "cache-manager": "^3.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^8.6.0",
@@ -50,6 +51,7 @@
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/joi": "^17.2.3",
