--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.17",
+    "bcrypt": "^5.0.1",
     "cache-manager": "^3.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -36,6 +38,9 @@
     "joi": "^17.4.0",
     "morgan": "^1.10.0",
     "nest-winston": "^1.5.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -53,6 +58,7 @@
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
