--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "doc": "npx @compodoc/compodoc -p tsconfig.json -s"
+    "doc": "npx @compodoc/compodoc -p tsconfig.json -s",
+    "ormconfig": "rimraf ormconfig.json && ts-node -r  tsconfig-paths/register src/scripts/add-orm-config.ts",
+    "seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-seeding/dist/cli.js",
+    "seed:config": "npm run seed config",
+    "seed:run": "npm run seed seed"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
@@ -80,6 +84,7 @@
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
+    "typeorm-seeding": "^1.6.1",
     "typescript": "^4.2.3"
   },
   "jest": {
