add : add cookie-parser and global intercreptor

--- a/package.json
+++ b/package.json
@@ -34,14 +34,19 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.17",
+    "@nestjsx/crud": "*",
+    "@nestjsx/crud-typeorm": "*",
+    "aws-sdk": "^2.923.0",
     "bcrypt": "^5.0.1",
     "cache-manager": "^3.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.6.0",
     "helmet": "^4.6.0",
     "joi": "^17.4.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nest-winston": "^1.5.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -65,10 +70,12 @@
     "@nestjs/testing": "^7.6.15",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^3.4.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/joi": "^17.2.3",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.36",
     "@types/serve-favicon": "^2.5.2",
     "@types/supertest": "^2.0.10",
